--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
+    "dev": "nodemon src/index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Catur Hidayat",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   }
 }
