--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
+    "prod": "node src/index",
     "dev": "nodemon src/index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
