--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=3001
+SALT_ROUND=8
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
