--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
   "dependencies": {
     "@prisma/client": "^4.9.0",
     "bcrypt": "^5.1.0",
-    "bootstrap": "^5.3.0-alpha1",
+    "bulma": "^0.9.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
-    "express-jwt": "^8.3.0",
     "express-session": "^1.17.3",
-    "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
