--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "prisma": "^4.9.0"
   }
 }
