--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Catur Hidayat",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.10.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
