--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3001
-SECRET_KEY='secret'
+SECRET_KEY='this is secret'
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
