--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
-    "express-validator": "^6.15.0",
+    "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "prisma": "^4.9.0"
   }
