--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "postinstall": "npx prisma generate && npx prisma migrate dev",
+    "postinstall": "prisma generate && prisma migrate dev",
     "dev": "nodemon src/index",
     "start": "node src/index",
     "test": "echo \"Error: no test specified\" && exit 1"
